--- a/consulta1.html
+++ b/consulta1.html
@@ -5,7 +5,7 @@
 	<script>
 	//alert("hello world");
 	//console.log("esto es la console");
-	  $.get('consulta1.php',function(data){
+	  $.post('consulta1.php',function(data){
                //console.log(data);
                $('#receptor').html(data);
                //alert(data);
