--- a/consulta2.html
+++ b/consulta2.html
@@ -5,7 +5,7 @@
 	<script>
 	//alert("hello world");
 	//console.log("esto es la console");
-	  $.get('consulta1.php',function(data){
+	  $.post('consulta2.php',{dato: "1",campaign_id: "5538"},function(data){
                //console.log(data);
                $('#receptor').html(data);
                //alert(data);
