--- a/consulta2.html
+++ b/consulta2.html
@@ -1,21 +1,63 @@
 <html>
+
 <head>
-	<title>POST</title>
-	<script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
-	<script>
-	//alert("hello world");
-	//console.log("esto es la console");
-	  $.post('consulta2.php',{dato: "1",campaign_id: "5550"},function(data){
-               //console.log(data);
-               $('#receptor').html(data);
-               //alert(data);
+    <title>POST</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+</head>
+
+<body>
+    <div id='receptor'></div>
+    <button class="btn btn-default" type="button" id="consulta2" >Consulta</button>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Fecha</th>
+                <th>Estado</th>
+                <th>ID Campaña</th>
+                <th>Numero</th>
+                <th>Intento</th>
+                <th>ID Llamada</th>
+            </tr>
+        </thead>
+        <tbody id="tablaConsulta">
+        </tbody>
+    </table>
+    <script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script>
+
+
+    $("#consulta2").on("click", function() {
+
+        console.log($(this).text());
+        var s = $.post('consulta2.php', {
+            dato: "1",
+            campaign_id: "5668"
+        }, function(data) {
+            console.log(data);
+            $('#tablaConsulta').html('');
+        })
+
+        .done(function(data) {
+                console.log("second success");
+                var row = '<tr> <th>' + data.start_date + '</th> <td>' + data.status + '</td> <td>' + data.rc_campaign_id + '</td> <td>' + data.mobile_number + '</td> <td>' + data.attempt + '</td> <td>' + data.rc_call_id + '</td> </tr>';
+
+                $('#tablaConsulta').html(row);
+
+            })
+            .fail(function() {
+                console.log("error");
+            })
+            .always(function() {
+                console.log("finished");
             });
 
-	</script>
-</head>
-<body>
-<div id='receptor'></div>
+    });
 
 
+    </script>
 </body>
+
 </html>
